// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RuleEditor matches snapshot no tier in rule 1`] = `
<div
  class="rule-editor"
>
  <div
    class="title"
  >
    <button
      class="bp6-button bp6-minimal left"
      type="button"
    >
      <span
        class="bp6-button-text"
      >
        loadForever(1x)
      </span>
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
        />
      </span>
    </button>
    <div
      class="spacer"
    />
    <button
      class="bp6-button bp6-minimal"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-trash"
      >
        <svg
          data-icon="trash"
        />
      </span>
    </button>
  </div>
  <div
    class="bp6-collapse"
    style="height: auto; overflow-y: visible; transition: none;"
  >
    <div
      aria-hidden="false"
      class="bp6-collapse-body"
      style="transform: translateY(0); transition: none;"
    >
      <div
        class="rule-detail bp6-card bp6-elevation-2"
      >
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <div
              class="bp6-control-group"
              role="group"
            >
              <div
                class="bp6-html-select"
              >
                <select>
                  <option
                    value="loadForever"
                  >
                    loadForever
                  </option>
                  <option
                    value="loadByInterval"
                  >
                    loadByInterval
                  </option>
                  <option
                    value="loadByPeriod"
                  >
                    loadByPeriod
                  </option>
                  <option
                    value="dropForever"
                  >
                    dropForever
                  </option>
                  <option
                    value="dropByInterval"
                  >
                    dropByInterval
                  </option>
                  <option
                    value="dropByPeriod"
                  >
                    dropByPeriod
                  </option>
                  <option
                    value="dropBeforeByPeriod"
                  >
                    dropBeforeByPeriod
                  </option>
                  <option
                    value="broadcastForever"
                  >
                    broadcastForever
                  </option>
                  <option
                    value="broadcastByInterval"
                  >
                    broadcastByInterval
                  </option>
                  <option
                    value="broadcastByPeriod"
                  >
                    broadcastByPeriod
                  </option>
                </select>
                <span
                  class="bp6-icon bp6-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <div
              class="bp6-control-group tiered-replicant"
              role="group"
            >
              <button
                class="bp6-button bp6-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp6-button-text"
                >
                  Tier:
                </span>
              </button>
              <div
                class="formatted-input suggestible-input"
              >
                <div
                  class="bp6-input-group bp6-fill"
                >
                  <input
                    aria-disabled="false"
                    class="bp6-input"
                    style="padding-right: 0px;"
                    type="text"
                    value="test1"
                  />
                  <span
                    class="bp6-input-action"
                  >
                    <span
                      class="bp6-popover-target"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="menu"
                        class="bp6-button bp6-minimal"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="bp6-icon bp6-icon-caret-down"
                        >
                          <svg
                            data-icon="caret-down"
                          />
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <button
                class="bp6-button bp6-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp6-button-text"
                >
                  Replicants:
                </span>
              </button>
              <div
                class="bp6-control-group bp6-numeric-input"
                role="group"
              >
                <div
                  class="bp6-input-group"
                >
                  <input
                    aria-disabled="false"
                    aria-valuemax="256"
                    aria-valuemin="0"
                    aria-valuenow="1"
                    autocomplete="off"
                    class="bp6-input"
                    id="numericInput-0"
                    max="256"
                    min="0"
                    role="spinbutton"
                    type="text"
                    value="1"
                  />
                </div>
                <div
                  class="bp6-button-group bp6-vertical bp6-fixed"
                >
                  <button
                    aria-controls="numericInput-0"
                    aria-label="increment"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-chevron-up"
                    >
                      <svg
                        data-icon="chevron-up"
                      />
                    </span>
                  </button>
                  <button
                    aria-controls="numericInput-0"
                    aria-label="decrement"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                      />
                    </span>
                  </button>
                </div>
              </div>
              <button
                class="bp6-button"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="bp6-icon bp6-icon-trash"
                >
                  <svg
                    data-icon="trash"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <button
              class="bp6-button bp6-minimal"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-plus"
              >
                <svg
                  data-icon="plus"
                />
              </span>
              <span
                class="bp6-button-text"
              >
                Add historical tier replication
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleEditor matches snapshot with broadcast rule 1`] = `
<div
  class="rule-editor"
>
  <div
    class="title"
  >
    <button
      class="bp6-button bp6-minimal left"
      type="button"
    >
      <span
        class="bp6-button-text"
      >
        broadcastByInterval(2010-01-01/2015-01-01)
      </span>
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
        />
      </span>
    </button>
    <div
      class="spacer"
    />
    <button
      class="bp6-button bp6-minimal"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-trash"
      >
        <svg
          data-icon="trash"
        />
      </span>
    </button>
  </div>
  <div
    class="bp6-collapse"
    style="height: auto; overflow-y: visible; transition: none;"
  >
    <div
      aria-hidden="false"
      class="bp6-collapse-body"
      style="transform: translateY(0); transition: none;"
    >
      <div
        class="rule-detail bp6-card bp6-elevation-2"
      >
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <div
              class="bp6-control-group"
              role="group"
            >
              <div
                class="bp6-html-select"
              >
                <select>
                  <option
                    value="loadForever"
                  >
                    loadForever
                  </option>
                  <option
                    value="loadByInterval"
                  >
                    loadByInterval
                  </option>
                  <option
                    value="loadByPeriod"
                  >
                    loadByPeriod
                  </option>
                  <option
                    value="dropForever"
                  >
                    dropForever
                  </option>
                  <option
                    value="dropByInterval"
                  >
                    dropByInterval
                  </option>
                  <option
                    value="dropByPeriod"
                  >
                    dropByPeriod
                  </option>
                  <option
                    value="dropBeforeByPeriod"
                  >
                    dropBeforeByPeriod
                  </option>
                  <option
                    value="broadcastForever"
                  >
                    broadcastForever
                  </option>
                  <option
                    value="broadcastByInterval"
                  >
                    broadcastByInterval
                  </option>
                  <option
                    value="broadcastByPeriod"
                  >
                    broadcastByPeriod
                  </option>
                </select>
                <span
                  class="bp6-icon bp6-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                  />
                </span>
              </div>
              <div
                class="bp6-input-group"
              >
                <input
                  class="bp6-input"
                  placeholder="2010-01-01/2020-01-01"
                  type="text"
                  value="2010-01-01/2015-01-01"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleEditor matches snapshot with existing tier and non existing tier in rule 1`] = `
<div
  class="rule-editor"
>
  <div
    class="title"
  >
    <button
      class="bp6-button bp6-minimal left"
      type="button"
    >
      <span
        class="bp6-button-text"
      >
        loadByInterval(2010-01-01/2015-01-01, 3x)
      </span>
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
        />
      </span>
    </button>
    <div
      class="spacer"
    />
    <button
      class="bp6-button bp6-minimal"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-trash"
      >
        <svg
          data-icon="trash"
        />
      </span>
    </button>
  </div>
  <div
    class="bp6-collapse"
    style="height: auto; overflow-y: visible; transition: none;"
  >
    <div
      aria-hidden="false"
      class="bp6-collapse-body"
      style="transform: translateY(0); transition: none;"
    >
      <div
        class="rule-detail bp6-card bp6-elevation-2"
      >
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <div
              class="bp6-control-group"
              role="group"
            >
              <div
                class="bp6-html-select"
              >
                <select>
                  <option
                    value="loadForever"
                  >
                    loadForever
                  </option>
                  <option
                    value="loadByInterval"
                  >
                    loadByInterval
                  </option>
                  <option
                    value="loadByPeriod"
                  >
                    loadByPeriod
                  </option>
                  <option
                    value="dropForever"
                  >
                    dropForever
                  </option>
                  <option
                    value="dropByInterval"
                  >
                    dropByInterval
                  </option>
                  <option
                    value="dropByPeriod"
                  >
                    dropByPeriod
                  </option>
                  <option
                    value="dropBeforeByPeriod"
                  >
                    dropBeforeByPeriod
                  </option>
                  <option
                    value="broadcastForever"
                  >
                    broadcastForever
                  </option>
                  <option
                    value="broadcastByInterval"
                  >
                    broadcastByInterval
                  </option>
                  <option
                    value="broadcastByPeriod"
                  >
                    broadcastByPeriod
                  </option>
                </select>
                <span
                  class="bp6-icon bp6-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                  />
                </span>
              </div>
              <div
                class="bp6-input-group"
              >
                <input
                  class="bp6-input"
                  placeholder="2010-01-01/2020-01-01"
                  type="text"
                  value="2010-01-01/2015-01-01"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <div
              class="bp6-control-group tiered-replicant"
              role="group"
            >
              <button
                class="bp6-button bp6-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp6-button-text"
                >
                  Tier:
                </span>
              </button>
              <div
                class="formatted-input suggestible-input"
              >
                <div
                  class="bp6-input-group bp6-fill"
                >
                  <input
                    aria-disabled="false"
                    class="bp6-input"
                    style="padding-right: 0px;"
                    type="text"
                    value="test1"
                  />
                  <span
                    class="bp6-input-action"
                  >
                    <span
                      class="bp6-popover-target"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="menu"
                        class="bp6-button bp6-minimal"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="bp6-icon bp6-icon-caret-down"
                        >
                          <svg
                            data-icon="caret-down"
                          />
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <button
                class="bp6-button bp6-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp6-button-text"
                >
                  Replicants:
                </span>
              </button>
              <div
                class="bp6-control-group bp6-numeric-input"
                role="group"
              >
                <div
                  class="bp6-input-group"
                >
                  <input
                    aria-disabled="false"
                    aria-valuemax="256"
                    aria-valuemin="0"
                    aria-valuenow="2"
                    autocomplete="off"
                    class="bp6-input"
                    id="numericInput-3"
                    max="256"
                    min="0"
                    role="spinbutton"
                    type="text"
                    value="2"
                  />
                </div>
                <div
                  class="bp6-button-group bp6-vertical bp6-fixed"
                >
                  <button
                    aria-controls="numericInput-3"
                    aria-label="increment"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-chevron-up"
                    >
                      <svg
                        data-icon="chevron-up"
                      />
                    </span>
                  </button>
                  <button
                    aria-controls="numericInput-3"
                    aria-label="decrement"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                      />
                    </span>
                  </button>
                </div>
              </div>
              <button
                class="bp6-button"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="bp6-icon bp6-icon-trash"
                >
                  <svg
                    data-icon="trash"
                  />
                </span>
              </button>
            </div>
            <div
              class="bp6-control-group tiered-replicant"
              role="group"
            >
              <button
                class="bp6-button bp6-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp6-button-text"
                >
                  Tier:
                </span>
              </button>
              <div
                class="formatted-input suggestible-input"
              >
                <div
                  class="bp6-input-group bp6-fill"
                >
                  <input
                    aria-disabled="false"
                    class="bp6-input"
                    style="padding-right: 0px;"
                    type="text"
                    value="nonexist"
                  />
                  <span
                    class="bp6-input-action"
                  >
                    <span
                      class="bp6-popover-target"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="menu"
                        class="bp6-button bp6-minimal"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="bp6-icon bp6-icon-caret-down"
                        >
                          <svg
                            data-icon="caret-down"
                          />
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <button
                class="bp6-button bp6-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp6-button-text"
                >
                  Replicants:
                </span>
              </button>
              <div
                class="bp6-control-group bp6-numeric-input"
                role="group"
              >
                <div
                  class="bp6-input-group"
                >
                  <input
                    aria-disabled="false"
                    aria-valuemax="256"
                    aria-valuemin="0"
                    aria-valuenow="1"
                    autocomplete="off"
                    class="bp6-input"
                    id="numericInput-4"
                    max="256"
                    min="0"
                    role="spinbutton"
                    type="text"
                    value="1"
                  />
                </div>
                <div
                  class="bp6-button-group bp6-vertical bp6-fixed"
                >
                  <button
                    aria-controls="numericInput-4"
                    aria-label="increment"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-chevron-up"
                    >
                      <svg
                        data-icon="chevron-up"
                      />
                    </span>
                  </button>
                  <button
                    aria-controls="numericInput-4"
                    aria-label="decrement"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                      />
                    </span>
                  </button>
                </div>
              </div>
              <button
                class="bp6-button"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="bp6-icon bp6-icon-trash"
                >
                  <svg
                    data-icon="trash"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <button
              class="bp6-button bp6-minimal"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-plus"
              >
                <svg
                  data-icon="plus"
                />
              </span>
              <span
                class="bp6-button-text"
              >
                Add historical tier replication
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleEditor matches snapshot with existing tier in rule 1`] = `
<div
  class="rule-editor"
>
  <div
    class="title"
  >
    <button
      class="bp6-button bp6-minimal left"
      type="button"
    >
      <span
        class="bp6-button-text"
      >
        loadByInterval(2010-01-01/2015-01-01, 2x)
      </span>
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
        />
      </span>
    </button>
    <div
      class="spacer"
    />
    <button
      class="bp6-button bp6-minimal"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-trash"
      >
        <svg
          data-icon="trash"
        />
      </span>
    </button>
  </div>
  <div
    class="bp6-collapse"
    style="height: auto; overflow-y: visible; transition: none;"
  >
    <div
      aria-hidden="false"
      class="bp6-collapse-body"
      style="transform: translateY(0); transition: none;"
    >
      <div
        class="rule-detail bp6-card bp6-elevation-2"
      >
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <div
              class="bp6-control-group"
              role="group"
            >
              <div
                class="bp6-html-select"
              >
                <select>
                  <option
                    value="loadForever"
                  >
                    loadForever
                  </option>
                  <option
                    value="loadByInterval"
                  >
                    loadByInterval
                  </option>
                  <option
                    value="loadByPeriod"
                  >
                    loadByPeriod
                  </option>
                  <option
                    value="dropForever"
                  >
                    dropForever
                  </option>
                  <option
                    value="dropByInterval"
                  >
                    dropByInterval
                  </option>
                  <option
                    value="dropByPeriod"
                  >
                    dropByPeriod
                  </option>
                  <option
                    value="dropBeforeByPeriod"
                  >
                    dropBeforeByPeriod
                  </option>
                  <option
                    value="broadcastForever"
                  >
                    broadcastForever
                  </option>
                  <option
                    value="broadcastByInterval"
                  >
                    broadcastByInterval
                  </option>
                  <option
                    value="broadcastByPeriod"
                  >
                    broadcastByPeriod
                  </option>
                </select>
                <span
                  class="bp6-icon bp6-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                  />
                </span>
              </div>
              <div
                class="bp6-input-group"
              >
                <input
                  class="bp6-input"
                  placeholder="2010-01-01/2020-01-01"
                  type="text"
                  value="2010-01-01/2015-01-01"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <div
              class="bp6-control-group tiered-replicant"
              role="group"
            >
              <button
                class="bp6-button bp6-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp6-button-text"
                >
                  Tier:
                </span>
              </button>
              <div
                class="formatted-input suggestible-input"
              >
                <div
                  class="bp6-input-group bp6-fill"
                >
                  <input
                    aria-disabled="false"
                    class="bp6-input"
                    style="padding-right: 0px;"
                    type="text"
                    value="test1"
                  />
                  <span
                    class="bp6-input-action"
                  >
                    <span
                      class="bp6-popover-target"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="menu"
                        class="bp6-button bp6-minimal"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="bp6-icon bp6-icon-caret-down"
                        >
                          <svg
                            data-icon="caret-down"
                          />
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <button
                class="bp6-button bp6-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp6-button-text"
                >
                  Replicants:
                </span>
              </button>
              <div
                class="bp6-control-group bp6-numeric-input"
                role="group"
              >
                <div
                  class="bp6-input-group"
                >
                  <input
                    aria-disabled="false"
                    aria-valuemax="256"
                    aria-valuemin="0"
                    aria-valuenow="2"
                    autocomplete="off"
                    class="bp6-input"
                    id="numericInput-2"
                    max="256"
                    min="0"
                    role="spinbutton"
                    type="text"
                    value="2"
                  />
                </div>
                <div
                  class="bp6-button-group bp6-vertical bp6-fixed"
                >
                  <button
                    aria-controls="numericInput-2"
                    aria-label="increment"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-chevron-up"
                    >
                      <svg
                        data-icon="chevron-up"
                      />
                    </span>
                  </button>
                  <button
                    aria-controls="numericInput-2"
                    aria-label="decrement"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                      />
                    </span>
                  </button>
                </div>
              </div>
              <button
                class="bp6-button"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="bp6-icon bp6-icon-trash"
                >
                  <svg
                    data-icon="trash"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <button
              class="bp6-button bp6-minimal"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-plus"
              >
                <svg
                  data-icon="plus"
                />
              </span>
              <span
                class="bp6-button-text"
              >
                Add historical tier replication
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RuleEditor matches snapshot with non existing tier in rule 1`] = `
<div
  class="rule-editor"
>
  <div
    class="title"
  >
    <button
      class="bp6-button bp6-minimal left"
      type="button"
    >
      <span
        class="bp6-button-text"
      >
        loadByInterval(2010-01-01/2015-01-01, 2x)
      </span>
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
        />
      </span>
    </button>
    <div
      class="spacer"
    />
    <button
      class="bp6-button bp6-minimal"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-trash"
      >
        <svg
          data-icon="trash"
        />
      </span>
    </button>
  </div>
  <div
    class="bp6-collapse"
    style="height: auto; overflow-y: visible; transition: none;"
  >
    <div
      aria-hidden="false"
      class="bp6-collapse-body"
      style="transform: translateY(0); transition: none;"
    >
      <div
        class="rule-detail bp6-card bp6-elevation-2"
      >
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <div
              class="bp6-control-group"
              role="group"
            >
              <div
                class="bp6-html-select"
              >
                <select>
                  <option
                    value="loadForever"
                  >
                    loadForever
                  </option>
                  <option
                    value="loadByInterval"
                  >
                    loadByInterval
                  </option>
                  <option
                    value="loadByPeriod"
                  >
                    loadByPeriod
                  </option>
                  <option
                    value="dropForever"
                  >
                    dropForever
                  </option>
                  <option
                    value="dropByInterval"
                  >
                    dropByInterval
                  </option>
                  <option
                    value="dropByPeriod"
                  >
                    dropByPeriod
                  </option>
                  <option
                    value="dropBeforeByPeriod"
                  >
                    dropBeforeByPeriod
                  </option>
                  <option
                    value="broadcastForever"
                  >
                    broadcastForever
                  </option>
                  <option
                    value="broadcastByInterval"
                  >
                    broadcastByInterval
                  </option>
                  <option
                    value="broadcastByPeriod"
                  >
                    broadcastByPeriod
                  </option>
                </select>
                <span
                  class="bp6-icon bp6-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                  />
                </span>
              </div>
              <div
                class="bp6-input-group"
              >
                <input
                  class="bp6-input"
                  placeholder="2010-01-01/2020-01-01"
                  type="text"
                  value="2010-01-01/2015-01-01"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <div
              class="bp6-control-group tiered-replicant"
              role="group"
            >
              <button
                class="bp6-button bp6-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp6-button-text"
                >
                  Tier:
                </span>
              </button>
              <div
                class="formatted-input suggestible-input"
              >
                <div
                  class="bp6-input-group bp6-fill"
                >
                  <input
                    aria-disabled="false"
                    class="bp6-input"
                    style="padding-right: 0px;"
                    type="text"
                    value="nonexist"
                  />
                  <span
                    class="bp6-input-action"
                  >
                    <span
                      class="bp6-popover-target"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="menu"
                        class="bp6-button bp6-minimal"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="bp6-icon bp6-icon-caret-down"
                        >
                          <svg
                            data-icon="caret-down"
                          />
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <button
                class="bp6-button bp6-minimal"
                style="pointer-events: none;"
                type="button"
              >
                <span
                  class="bp6-button-text"
                >
                  Replicants:
                </span>
              </button>
              <div
                class="bp6-control-group bp6-numeric-input"
                role="group"
              >
                <div
                  class="bp6-input-group"
                >
                  <input
                    aria-disabled="false"
                    aria-valuemax="256"
                    aria-valuemin="0"
                    aria-valuenow="2"
                    autocomplete="off"
                    class="bp6-input"
                    id="numericInput-1"
                    max="256"
                    min="0"
                    role="spinbutton"
                    type="text"
                    value="2"
                  />
                </div>
                <div
                  class="bp6-button-group bp6-vertical bp6-fixed"
                >
                  <button
                    aria-controls="numericInput-1"
                    aria-label="increment"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-chevron-up"
                    >
                      <svg
                        data-icon="chevron-up"
                      />
                    </span>
                  </button>
                  <button
                    aria-controls="numericInput-1"
                    aria-label="decrement"
                    class="bp6-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                      />
                    </span>
                  </button>
                </div>
              </div>
              <button
                class="bp6-button"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="bp6-icon bp6-icon-trash"
                >
                  <svg
                    data-icon="trash"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="bp6-form-group"
        >
          <div
            class="bp6-form-content"
          >
            <button
              class="bp6-button bp6-minimal"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-plus"
              >
                <svg
                  data-icon="plus"
                />
              </span>
              <span
                class="bp6-button-text"
              >
                Add historical tier replication
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
